feat: add verify_snatched feat: add sync_wanted_episodes and test feat: change show dto feat: swagger better docs
