# docs/swagger.yaml
@@ -5,11 +5,6 @@ definitions:
       magneticUrl:
         type: string
     type: object
-  schema.CheckTorrentRequest:
-    properties:
-      filter:
-        type: string
-    type: object
   schema.CheckTorrentResponse:
     properties:
       completed:
@@ -404,12 +399,9 @@ paths:
       - application/json
       description: Check torrent info
       parameters:
-      - description: Request Body
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/schema.CheckTorrentRequest'
+      - in: query
+        name: status
+        type: string
       produces:
       - application/json
       responses:
